--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,19 @@
             "email": "derick.hermanson@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "nikic/php-parser": "^4.0"
+    },
+    "require-dev": {
+        "phpspec/phpspec": "^4.3",
+        "psy/psysh": "^0.9.3"
+    },
+    "autoload": {
+	"psr-4": {
+	    "dhermanson\\DevTools\\": "src/"
+	},
+	"classmap": [
+	    "spec"
+	]
+    }
 }
